--- a/css/app.css
+++ b/css/app.css
@@ -22,3 +22,9 @@ header {
     font-size: 20px;
     border-radius: 111px;
 }
+.footer div {
+    height: 200px;
+    background-color: #524B58;
+    margin-top: 9%;
+    padding-top: 5%
+}
