--- a/css/app.css
+++ b/css/app.css
@@ -14,6 +14,7 @@ header {
     text-align: center;
     background-color: #565A69;
     color: #FFA500;
+    height: 90px
 }
 .follow {
     background-color: #333;
