--- a/css/app.css
+++ b/css/app.css
@@ -22,9 +22,10 @@ header {
     font-size: 20px;
     border-radius: 111px;
 }
-.footer div {
+.footer > .columns {
     height: 140px;
     background-color: #524B58;
     margin-top: 9%;
     padding-top: 5%;
+    border-left: 1px solid grey;
 }
